--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "domain-lookup",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "A simple CLI tool to check domain name availability using WHOIS.",
   "main": "index.js",
   "bin": {
@@ -19,6 +19,7 @@
     "check",
     "checker",
     "lookup",
+    "status",
     "availability",
     "domain-lookup",
     "cli",
@@ -26,6 +27,7 @@
     "command-line-tool",
     "domain-scanner",
     "domain-checker",
+    "domain-status",
     "domain-availability",
     "domain-whois",
     "domain-whois-lookup",
